--- a/A01283152/Ejercicios/miapp/miapp/src/app/components/home/home.component.html
+++ b/A01283152/Ejercicios/miapp/miapp/src/app/components/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div class="jumbotron">
+    <h1 class="display-4">Hola Mundo</h1>
+    <p class="lead">
+        Este es un ejemplo de jumbotrón
+    </p>
+    <hr class="my-4" />
+    <p>
+        Utiliza utilidades de la clase para la tipografía
+
+    </p>
+<a class="btn btn-primary btn-lg" href="#" role="button"> aprender más</a>
+</div>
