--- a/A01283152/Ejercicios/miapp/miapp/src/app/components/shared/navbar/navbar.component.html
+++ b/A01283152/Ejercicios/miapp/miapp/src/app/components/shared/navbar/navbar.component.html
@@ -19,6 +19,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="about">About</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="parentcomponent">Parent</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="childcomponent">Child</a>
+            </li>
         </ul>
     </div>
 </nav>
