--- a/A01283152/Ejercicios/miapp/miapp/src/app/components/shared/navbar/navbar.component.html
+++ b/A01283152/Ejercicios/miapp/miapp/src/app/components/shared/navbar/navbar.component.html
@@ -25,6 +25,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="childcomponent">Child</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="ngfor">Ej NgFor</a>
+            </li>
         </ul>
     </div>
 </nav>
