--- a/A01283152/Ejercicios/miapp/miapp/src/app/components/ngfor/ngfor.component.html
+++ b/A01283152/Ejercicios/miapp/miapp/src/app/components/ngfor/ngfor.component.html
@@ -1,1 +1,10 @@
-<p>ngfor works!</p>
+<h1>{{title}}</h1>
+<div class=”container”><br>
+    <ul class=”list-group”>
+        <li class="list-group-item list-group-item-success" *ngFor="let nombre of nombres; let i=index">
+            <p>{{i + 1}} - </p>
+            <p>Nombre: <b>{{ nombre.nom }}</b></p>
+            <p>, edad: <b>{{ nombre.edad}}</b></p>
+        </li>
+    </ul>
+</div>
